[package]
name = "functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
strum = "0.25"
strum_macros = "0.25"
qndr = "*"
regex = "*"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"
chrono = '*'
ndarray = '*'